<resources>
    <string name="app_name">TechHome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
    <string name="no_notifications">No Notifications</string>

    <!--fragments-->

    <string name="my_profile">My Profile</string>
    <string name="login_register">Sign In/Register</string>
    <string name="history">Latest Order</string>
    <string name="app_offers">App Offers</string>
    <string name="my_issues">My Issues</string>
    <string name="my_orders">My Orders</string>
    <string name="rate_card">Rate Card</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="faqs">FAQs</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <string name="appliance">Select Appliance</string>
    <string name="ac">A/C</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="cooler">Cooler</string>
    <string name="tv">TV</string>
    <string name="others">Other Appliance Problem</string>
    <string name="electrical">Electrical Utilities</string>
    <string name="wiring">Wiring Options</string>
    <string name="plumbing">Plumbing Options</string>
    <string name="appliances_activity">Appliances</string>
    <string name="enter_mode">Entering Preference</string>
    <string name="all_labels">All Labels</string>
    <string name="about_us">About US</string>
    <string name="contact_us">Contact Us</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Create A New Account</string>
    <string name="phone_number">Phone No.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="pin_code">Pin Code</string>
    <string name="registration">Register</string>
    <string name="city_name">City</string>
    <string name="select_date">Select Date and Time</string>
    <string name="next">Next</string>
    <string name="wiring_requirements">Any Other Requirements</string>
    <string name="plumbing_details">Further Details</string>
    <string name="appliance_issue">Issue Description</string>
    <string name="charges_apply">Charges Applicable</string>
    <string name="pick_date">Pick Date</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="grid_demo">Grid Item</string>
    <string name="sign_in">Sign In</string>
    <string name="or">OR</string>
    <string name="guest_login">Enter As Guest</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="description">Description</string>
    <string name="welcome_message">Need Repairmen? We Got Them !!</string>
    <string name="forgot_password_message">We will send on OTP at your registered email using which you can reset your password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="no_internet">Could not connect to internet</string>
    <string name="no_internet_title">Network Error</string>
    <string name="ok">OK</string>
    <string name="oops">Oops!!</string>
    <string name="error_message">Some Unexpected Error has Occurred</string>
    <string name="login_activity_invalid_password_title">Invalid Password</string>
    <string name="login_activity_invalid_password">Password cannot be blank.</string>
    <string name="login_activity_invalid_phone_title">Invalid Phone Number</string>
    <string name="login_activity_invalid_phone">Phone Number should be 10 digit long.</string>
    <string name="new_password">Enter A Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="choose_password">Choose A Password</string>
    <string name="home">Home</string>
    <string name="passwords_didnt_match_title">Incorrect Password</string>
    <string name="passwords_didnt_match">Passwords Didn\'t Match</string>
    <string name="blank_fields_title">Blank Fields</string>
    <string name="blank_fields">Mandatory Fields shouldn\'t be blank.</string>
    <string name="success">Successful</string>
    <string name="order_success">Your Order has been placed.</string>


    <string-array name="appliance_issue">
        <item>@string/ac</item>
        <item>@string/refrigerator</item>
        <item>@string/cooler</item>
        <item>@string/tv</item>
        <item>@string/others</item>
    </string-array>

    <string-array name="wiring_issues">
        <item>Full Home Wiring</item>
        <item>Other Wiring Problems</item>
    </string-array>

    <string-array name="plumbing_issues">
        <item>Fitting Pipes and Others</item>
        <item>Repairing Pipes and Others</item>
        <item>Others Plumbing Problems</item>
    </string-array>

    <string-array name="city_names">
        <item>Ghaziabad</item>
        <item>Meerut</item>
        <item>Muradnagar</item>
        <item>Modinagar</item>
        <item>Saharanpur</item>
    </string-array>

    <string-array name="time_slots">
        <item>7:30 am - 9:30 am</item>
        <item>9:30 am - 11:30 am</item>
        <item>11:30 am - 1:30 pm</item>
        <item>1:30 pm - 3:30 pm</item>
        <item>3:30 pm - 5:30 pm</item>
        <item>5:30 pm - 8:00 pm</item>
    </string-array>

    <string name="appliances_dashboard">Appliances</string>
    <string name="plumbing_dashboard">Plumbing</string>
    <string name="wiring_dashboard">Wiring</string>
    <string name="appliances_desc">Let us take care of your applicances</string>
    <string name="wiring_desc">Get your Wiring fixed</string>
    <string name="plumbing_desc">Don\'t let those pipes leak</string>
    <string name="image_appliances">http://techhome.net16.net/static/history.png</string>
    <string name="image_wiring">http://techhome.net16.net/static/wiring.png</string>
    <string name="image_plumbing">http://techhome.net16.net/static/plumbing.png</string>
    <string name="image_siddhartha">http://techhome.net16.net/static/siddhartha_tyagi.jpg</string>
    <string name="image_mohan">http://techhome.net16.net/static/mohan_banal.jpg</string>
    <string name="image_prateek">http://techhome.net16.net/static/prateek_kapil.jpg</string>
    <string name="image_shivam">http://techhome.net16.net/static/shivam_tyagi.jpg</string>
    <string name="siddhartha">Siddhartha Tyagi</string>
    <string name="sid_pos">Founder and CEO</string>
    <string name="mohan">Mohan Bansal</string>
    <string name="mohan_pos">Co-Founder</string>
    <string name="prateek_pos">Co-Founder</string>
    <string name="shivam_pos">Co-Founder</string>
    <string name="prateek">Prateek Kapil</string>
    <string name="shivam">Shivam Tyagi</string>
    <string name="registration_success">Registration Successful</string>
    <string name="login_success">Login Successful</string>
    <string name="invalid_date">Select Valid Date</string>
    <string name="order_type">Order Type</string>
    <string name="order_description">Order Description</string>
    <string name="order_date">Service Date</string>
    <string name="order_city">City</string>
    <string name="order_slot">Service Slot</string>
    <string name="order_phone">Mobile Number</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="banner_ad_unit_id">ca-app-pub-8579317175981674/4616852742</string>

</resources>
