<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/orders"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/my_orders" />

        <item
            android:id="@+id/issues"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/my_issues" />

        <item
            android:id="@+id/offers"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/app_offers" />

        <item
            android:id="@+id/rate"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/rate_card" />
    </group>

    <item android:title=" ">

        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/settings" />

            <item
                android:id="@+id/logout"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>