<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dip"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:layout_marginTop="65dip"
        android:background="#33c5cae9">

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/txtAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAppName"
            android:layout_marginLeft="12dip"
            android:layout_marginRight="12dip"
            android:layout_marginTop="42dip"
            android:background="@color/colorPrimaryLight"
            android:elevation="4dip"
            android:hint="@string/name"
            android:padding="10dip"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etName"
            android:layout_marginLeft="12dip"
            android:layout_marginRight="12dip"
            android:layout_marginTop="3dip"
            android:background="@color/colorPrimaryLight"
            android:elevation="4dip"
            android:hint="@string/email"
            android:padding="10dip"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmail"
            android:layout_marginLeft="12dip"
            android:layout_marginRight="12dip"
            android:layout_marginTop="3dip"
            android:background="@color/colorPrimaryLight"
            android:elevation="4dip"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="10dip"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPhoneNumber"
            android:layout_marginLeft="12dip"
            android:layout_marginRight="12dip"
            android:layout_marginTop="3dip"
            android:background="@color/colorPrimaryLight"
            android:elevation="4dip"
            android:gravity="top"
            android:hint="@string/address"
            android:maxLines="3"
            android:minLines="2"
            android:padding="10dip"
            android:singleLine="false"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etAddress"
            android:layout_marginLeft="12dip"
            android:layout_marginRight="12dip"
            android:layout_marginTop="3dip"
            android:background="@color/colorPrimaryLight"
            android:elevation="4dip"
            android:hint="@string/city_name"
            android:padding="10dip"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/etPinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etCity"
            android:layout_marginLeft="12dip"
            android:layout_marginRight="12dip"
            android:layout_marginTop="3dip"
            android:inputType="number"
            android:background="@color/colorPrimaryLight"
            android:elevation="4dip"
            android:hint="@string/pin_code"
            android:padding="10dip"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDark"
            android:elevation="4dip"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </RelativeLayout>

</RelativeLayout>
