<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context="com.techHome.fragments.NavigationDrawerHistoryFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtAttribute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="10dip"
                android:padding="5dip"
                android:text="@string/order_type"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtAttribute"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="5dip"
                android:padding="5dip"
                android:text="@string/dummy_text"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_below="@+id/txtValue"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:alpha="0.7"
                android:background="@color/black" />

            <TextView
                android:id="@+id/txtAttribute1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtValue"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="15dip"
                android:padding="5dip"
                android:text="@string/order_description"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtValue1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtAttribute1"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="5dip"
                android:padding="5dip"
                android:text="@string/dummy_text"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_below="@+id/txtValue1"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:alpha="0.7"
                android:background="@color/black" />


            <TextView
                android:id="@+id/txtAttribute2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtValue1"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="15dip"
                android:padding="5dip"
                android:text="@string/order_city"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtValue2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtAttribute2"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="5dip"
                android:padding="5dip"
                android:text="@string/dummy_text"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_below="@+id/txtValue2"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:alpha="0.7"
                android:background="@color/black" />


            <TextView
                android:id="@+id/txtAttribute3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtValue2"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="15dip"
                android:padding="5dip"
                android:text="@string/order_date"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtValue3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtAttribute3"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="5dip"
                android:padding="5dip"
                android:text="@string/dummy_text"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_below="@+id/txtValue3"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:alpha="0.7"
                android:background="@color/black" />

            <TextView
                android:id="@+id/txtAttribute4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtValue3"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="15dip"
                android:padding="5dip"
                android:text="@string/order_slot"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtValue4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtAttribute4"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="5dip"
                android:padding="5dip"
                android:text="@string/dummy_text"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_below="@+id/txtValue4"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:alpha="0.7"
                android:background="@color/black" />

            <TextView
                android:id="@+id/txtAttribute5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtValue4"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="15dip"
                android:padding="5dip"
                android:text="@string/order_phone"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtValue5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtAttribute5"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="5dip"
                android:padding="5dip"
                android:text="@string/dummy_text"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <View
                android:id="@+id/view6"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_below="@+id/txtValue5"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:alpha="0.7"
                android:background="@color/black" />

            <TextView
                android:id="@+id/view7"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_below="@+id/txtValue5"
                android:text=""/>
        </RelativeLayout>

    </ScrollView>

</android.support.v7.widget.CardView>
